image-collage/v2/index.css
/*Variables*/
:root {
  --primary: #0065ff;
  --secondary: #609fff;
  --background: #fff;
  --foreground: #000;
}

.darked:root {
  --primary: #00e4ff;
  --secondary: #00abbf;
  --background: #000;
  --foreground: #fff;
}

body {
	margin: 0;
	font-family: Open Sans;
	overflow: hidden;
}

.title {
	cursor: pointer;
}

.tags { 
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.tags::-webkit-scrollbar { 
  height: 0;
}

.tag {
	margin: 3px;
	cursor: pointer;
}

.grid {
	width: 100%;
	display: flex;
    flex-wrap: wrap;
}

.grid-item {
  position: relative;
  background-color: var(--foreground);
  border: 1px solid lightgray;
  cursor: pointer;
  overflow: hidden;
  /* background-position: center; */
  /* transition: background-size 0.1s ease; */
}

.grid-item img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  transition: all 0.1s ease;	
  image-rendering: crisp-edges;
  image-rendering: -moz-crisp-edges;          /* Firefox */
  image-rendering: -o-crisp-edges;            /* Opera */
  image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming)*/
  -ms-interpolation-mode: nearest-neighbor;   /* IE (non-standard property) */
}

.grid-item img:hover {
  transform: scale(1.2);
}

.static-banner {
  position: absolute;
  left: 0;
  top: 0;
  padding: 5px 8px;
  font-size: 12px;
  color: var(--foreground);
  background: var(--background);
  border: 1px solid lightgray;
  border-left: 0;
  border-top: 0;
  z-index: 2;
}

.button-active {
	color: lightgray;
	border: 1px solid lightgray;
}

.darked .button-active {
	color: gray;
	border: 1px solid gray;	
}

.button-inactive {
	color: lightgray;
	border: 1px solid lightgray;
}

.darked .button-inactive {
	color: gray;
	border: 1px solid gray;	
}

.loader {
    display: flex;
    justify-content: center;
    padding: 10px;
    font-size: 24px;
    position: absolute;
    width: 100%;
    margin: auto;
    z-index: 11;
}

.back {
	display: block;
	font-size: 0.9em;
}

.table {
	display: flex;
	width: 100%;
}
.counter {
	padding: 0 5px;
	text-align: left;
	vertical-align: top;
	display: inline-block;
	width: 40px;
	font-size: 0.9em;
}

.settings-icon {
	padding: 0 5px;	
}


#main {
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
}

#main h1,
#main h6 {
	margin: 10px 0;
}

#mosaic {
  overflow: auto;
  white-space: nowrap;
}

#viewer {
	z-index: 9;
	position: fixed;
	background-color: var(--background);
	width: 100%;
	height: 100%;
	padding-top: 0;
	text-align: center;
	transition: opacity 0.3s, visibility 0.3s;
	top: 0;
}
#viewer-prev {
	cursor: pointer;
	background-color: transparent;
	position: absolute;
	left: 0;
	top: 0;
	width: 25%;
	height: 100%;
	z-index: 11;
}
#viewer-next {
	cursor: pointer;
	background-color: transparent;
	position: absolute;
	right: 0;
	top: 0;
	width: 25%;
	height: 100%;
	z-index: 11;
}
#viewer-next:active {
	opacity: 0.4;
	background-image: linear-gradient(to left, var(--background), transparent);
}
#viewer-prev:active {
	opacity: 0.4;
	background-image: linear-gradient(to right, var(--background), transparent);
}

#viewer img {
	transition: transform 0.2s;
}

